	
	FIM NEWS -- history of (main) user-visible changes in FIM.

                Version 0.5-rc3

 * fix: with _re_search_opts='f' the in-descriptions search was broken
 * fix: removed obsolete documentation for the "window" command, now disabled.
 * bugfix: repeating "recording 'repeat_last'" (default '.' key) by prepending a number now works.

                Version 0.5-rc2

 * configure will autodetect and turn aalib on by default
 * fix: will emit more precise diagnostics on unsupported device string
 * fix: adjusted man pages for roff cleanliness
 * fix: typos fixed in the documentation

                Version 0.5-rc1

 * fix: enabled concurrent make, e.g.: make -j 4
 * bug workaround: had no console scroll if no command executed on PostInteractiveCommand
 * fix: some systems don't have sys_errlist: using strerror there
 * fix: corrected the quiet mode (-q) to be quieter
 * fix: no zlib.h build time dependency (this will be reintroduced in the future)

                Version 0.5-rc0

 * -R / --recursive switch to turn on recursive push of command line specified directories
 * added --sort and --sort-basename to sort the images list
 * introduced mipmap mechanism (_use_mipmaps) for faster display/scaling of images
 * status bar customizable with _display_status_fmt and _info_fmt_str, which can be
   controlled by the use of special image variable specifiers ('expandos'):
    "%T" expando to get (and display) total memory used by the program 
    "%C" expando to get (and display) file/memory usage by image cache
    "%M" expando to get (and display) memory used by the current (displayed) image
    "%c" expando to get (and display) centering information
    "%m" expando to get (and display) current image mipmap occupation information
    "%k" expando to get (and display) current image i:_comment value
    "%?PRE?VAR?POST?" expando to get (and display) "PRE".i:VAR."POST"
    ...
 * search (and jump) on image descriptions via 'goto' and key '/'